finish payment-method endpoint
