# models/sql/payment-method.go
@@ -1,8 +1,8 @@
 package sql
 
 type PaymentMethod struct {
-	ID            uint           `gorm:"primaryKey;auto_increment"`
-	Name          int            `gorm:"not null"`
-	IsActive      bool           `gorm:"not null"`
-	OrderPayments []OrderPayment `gorm:"constraint:OnDelete:CASCADE"`
+	ID            uint           `json:"id" gorm:"primaryKey;auto_increment"`
+	Name          int            `json:"name" gorm:"not null"`
+	IsActive      bool           `json:"is_active" gorm:"not null"`
+	OrderPayments []OrderPayment `json:",omitempty" gorm:"constraint:OnDelete:CASCADE"`
 }
